# FRTL

./: Cargo.toml  LICENSE  backup_database.sh  invite-patreon-code-generator-command.txt  package-lock.json
backend/: Cargo.toml  placeholder env  run.sh
backend/migrations/: schema.sql
backend/src/: error.rs  handlers.rs  logging.rs  main.rs  models.rs  patreon_handler.rs
backend/src/auth/: middleware.rs  mod.rs  models.rs  services.rs  utils.rs
backend/src/auth/routes/: account.rs  auth_handlers.rs  magic_link.rs  mod.rs
backend/src/games/: backend_2048_game.rs  backend_hexort_game.rs  backend_match_game.rs  backend_snake_game.rs  backend_wheel_game.rs  backend_word_game.rs  mod.rs
backend/src/generator/: generate_code.rs  generate_creature.rs  generate_egg.rs  mod.rs  prompts.rs
backend/src/services/: chaos_realm.rs  claim_service.rs  creature_bind.rs  creature_service.rs  energy_service.rs  magic_button_service.rs  market_service.rs  mod.rs  patreon_link_service.rs  scroll_service.rs  user_service.rs
backend/src/services/orderbook_service/: create.rs  mod.rs  models.rs  query.rs
backend/static/images/: scroll-default.avif
backend/static/webgl-games/hexort/: animate.js  audio.js  handlers.js  hexagon.js  index.html  main.js  sort.js  ui.js
frontend/: Cargo.toml  Trunk.toml  build.sh  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.rs  base.rs  config.rs  lib.rs  main.rs  models.rs  styles.rs
frontend/src/components/: creature_showcase.rs  gradient_background.rs  magic_button.rs  membership_required.rs  mod.rs  stats_counter.rs  user_leaderboard.rs
frontend/src/components/auth/: login_form.rs  magic_link_form.rs  mod.rs  register_form.rs
frontend/src/components/displays/: base_creature.rs  base_egg.rs  bind_modal.rs  card_base.rs  card_creature.rs  card_egg.rs  card_scroll.rs  chaos_realm_card.rs  energy_manager.rs  focus_base.rs  focus_creature.rs  focus_egg.rs  focus_scroll.rs  mod.rs  rename_creature.rs  soul_bind_button.rs
frontend/src/components/settings/: account_management.rs  membership_code.rs  mod.rs  patreon_link.rs  temporary_membership.rs
frontend/src/hooks/: auth_state.rs  form_state.rs  mod.rs  use_currency.rs  use_global_stats.rs  use_membership.rs  validation.rs
frontend/src/pages/: auth.rs  dashboard.rs  home.rs  mod.rs  profile.rs  settings.rs  verify_delete_account.rs  verify_magic_link.rs
frontend/src/pages/games/: claim.rs  frontend_2048_game.rs  frontend_2048_leaderboard.rs  frontend_hexort_game.rs  frontend_match_game.rs  frontend_snake_game.rs  hexort_leaderboard.rs  mod.rs  snake_leaderboard.rs  word_leaderboard.rs
frontend/src/pages/games/frontend_wheel_game/: mod.rs  wheel_canvas.rs  wheel_utils.rs
frontend/src/pages/games/frontend_word_game/: cooldown.rs  dictionary_lookup.rs  game_board.rs  keyboard.rs  mod.rs
frontend/src/pages/inventory/: filters.rs  handlers.rs  mod.rs  state.rs
frontend/src/pages/market/: handlers.rs  mod.rs  orderbook_modal.rs  refresh.rs
frontend/static/styles/: main.css
shared/: Cargo.toml
shared/src/: cleaned_valid_words.txt  constants.rs  lib.rs  password_reset.rs  profanity.rs  rate_limit.rs  shared_2048_game.rs  shared_match_game.rs  shared_snake_game.rs  shared_wheel_game.rs  shared_word_game.rs  validation.rs
~/.cloudflared/: config.yml
