[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.7.9", features = ["http2", "macros", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate", "macros", "json", "ipnetwork"], default-features = false }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "set-header"] }
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cookie = "0.18"
hyper = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
lettre = { version = "0.10", features = ["smtp-transport", "tokio1", "tokio1-native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.24", features = ["tokio-comp"] }
strum = { version = "0.25", features = ["derive"] }
base64 = "0.21"
once_cell = "1.19"
toml_edit = "0.21"
ipnetwork = "0.20"

# Dependencies for HMAC verification
hmac = "0.12"
hex = "0.4"
sha2 = "0.10"

log = "0.4"
axum-macros = "0.5.0"
