[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
yew = { version = "0.21", features = ["csr"] }
gloo = "0.10"
gloo-net = { version = "0.4", features = ["websocket"] }
gloo-timers = "0.3.0"
gloo-render = "0.2"  # For requestAnimationFrame
serde = { workspace = true }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.49"
js-sys = "0.3.76"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element", 
    "HtmlElement",
    "Window",
    "Storage",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "SubmitEvent",
    "Event",
    "EventTarget",
    "EventListener",
    "AddEventListenerOptions",
    "CustomEvent",
    "CustomEventInit",
    "DomRect",
    "MouseEvent",
    "Performance",
    "PerformanceTiming",
    "HtmlSelectElement",
    "HtmlIFrameElement",
    "Node",
    "MessageEvent",
    "Location",
    "KeyboardEvent",
    "CssStyleDeclaration",
    "DomTokenList",
    "HtmlDocument",
    "TouchEvent",
    "TouchList",
    "Touch",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
    "ScrollLogicalPosition"
]}
yew-router = "0.18"
log = "0.4"
wasm-logger = "0.2"
regex = "1.10.2"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
time = { version = "0.3", features = ["wasm-bindgen", "serde"] }
reqwest = { version = "0.11", features = ["json", "wasm-streams"] }
futures = "0.3.31"
gloo-events = "0.2.0"
once_cell = "1.17"
rand = { version = "0.8", features = ["small_rng", "getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
gloo-utils = "0.2.0"
